# Obsidian-plugin-back-end

./: .gitignore  Cargo.toml  diesel.toml
migrations/2024-12-22-133558_init_table/: down.sql  up.sql
migrations/2024-12-22-163903_add_embed_id/: down.sql  up.sql
src/: cors.rs  db.rs  main.rs  models.rs  schema.rs
src/models/: obsidian.rs
src/rag/: rag.rs
src/routes/: obsidian.rs
