[package]
name = "rocket-server"
version = "0.1.0"
edition = "2021"

[dependencies]
schemars = "0.8.21"
serde_json = "1.0.134"
dotenv = "0.15.0"
langchain-rust = { version = "4.6.0", features = ["postgres"] }

[dependencies.serde]
version = "1.0.216"
features = ["derive"]

[dependencies.chrono]
version = "0.4.39"
features = ["serde"]


[dependencies.diesel]
version = "2.2.6"
features = ["postgres", "chrono", "r2d2"]


[dependencies.rocket]
version = "0.5.1"
features = ["json"]
