[package]
name = "rocket-server"
version = "0.1.0"
edition = "2021"

[dependencies]
schemars = "0.8.21"
serde_json = "1.0.134"
dotenv = "0.15.0"
log = "0.4.22"

[dependencies.serde]
version = "1.0.216"
features = ["derive"]

[dependencies.chrono]
version = "0.4.39"
features = ["serde"]


[dependencies.diesel]
version = "2.2.6"
features = ["postgres", "chrono", "r2d2", "uuid"]


[dependencies.rocket]
version = "0.5.1"
features = ["json"]


[dependencies.uuid]
version = "1.0"
features = ["serde"]

[dependencies.langchain-rust]
path = "/Users/lucas/Documents/Rust/langchain-rust"
features = ["ollama", "postgres"]
